# Supply_GNN_Causal

./: .gitignore  README.md  action.slurm  main.py  model_evaluation.ipynb  pyproject.toml  requirements.txt  sim  sim.py
ANI/: AS_bias.py  DGP_module.py  README.md  application.py  data_module.py  estimator_original.py  inference_module.py  monte_carlo.py
dGC/: GNN.py  __init__.py  ate.py  baseline.py  estimators.py  gen_data.py  utils.py
paratune/: compare_dirgnn_vs_sage_ci.py  cv_er_baseline.csv  cv_rgg_baseline.csv  cv_rgg_n2000_top5_ci_report.csv  cv_rgg_n2000_top5_compare.csv  cv_rgg_topcfg_dropout_activation.csv  dirgnn_ci_clip_compare_fast.py  dirgnn_ci_clip_compare_n2000_runs100_od6_bwauto.csv  dirgnn_cv_tune.py  dirgnn_dropout_compare_balanced_smalltest.py  dirgnn_dropout_compare_runs_balanced.csv  dirgnn_dropout_compare_summary_balanced.csv  dirgnn_mse_ci_tune.py  dirgnn_plateau_compare_runs.csv  dirgnn_plateau_compare_smalltest.py  dirgnn_plateau_compare_summary.csv  dirgnn_rgg_mse_ci_tune_quick.csv  dirgnn_vs_sage_ci_n2000_runs100_clip0001_od6_bwauto_apples_fast.csv  dirgnn_vs_sage_ci_n2000_runs30_clip0001_od6_bwauto.csv  gps_fpr_fnr_8groups_runs.csv  gps_fpr_fnr_8groups_runs_balanced.csv  gps_fpr_fnr_8groups_runs_balanced_elu.csv  gps_fpr_fnr_8groups_smalltest.py  gps_fpr_fnr_8groups_summary.csv  gps_fpr_fnr_8groups_summary_balanced.csv  gps_fpr_fnr_8groups_summary_balanced_elu.csv  outcome_mse_compare_smalltest.py  outcome_mse_runs_balanced.csv  outcome_mse_runs_balanced_elu.csv  outcome_mse_runs_smalltest.csv  outcome_mse_summary_balanced.csv  (+13 more)
(+31 files in other folders)
